fix: now core does not import from infrastructure via static imports. the core engine is decoupled from everything else. defined validator and headercodec interfaces in core.domain and injected them ia the xorencryptionengine constructor