@@ -4,9 +4,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import at.tuwien.crypticcore.core.domain.CipherAlgorithm;
+import at.tuwien.crypticcore.core.domain.Context;
+import at.tuwien.crypticcore.core.domain.HeaderCodec;
+import at.tuwien.crypticcore.core.domain.Validator;
 import at.tuwien.crypticcore.core.domain.exception.DataTruncationException;
 import at.tuwien.crypticcore.core.domain.model.CrypticMode;
 import at.tuwien.crypticcore.core.engine.algorithm.XorCipher;
+import at.tuwien.crypticcore.infrastructure.io.ContextValidator;
+import at.tuwien.crypticcore.infrastructure.io.HeaderHandler;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -24,12 +29,13 @@ class XorEncryptionEngineTest {
   Path tempDir;
 
   private XorEncryptionEngine engine;
-  private CipherAlgorithm cipher;
 
   @BeforeEach
   void setUp() {
-    this.cipher = new XorCipher();
-    this.engine = new XorEncryptionEngine(cipher);
+    CipherAlgorithm cipher = new XorCipher();
+    Validator validator = new ContextValidator();
+    HeaderCodec headerCodec = new HeaderHandler();
+    this.engine = new XorEncryptionEngine(cipher, validator, headerCodec);
   }
 
   @Nested
@@ -39,42 +45,49 @@ class XorEncryptionEngineTest {
     @Test
     @DisplayName("Should successfully encrypt a file writing a 4-byte header + payload")
     void shouldEncryptFileSuccessfully() throws Exception {
-      Path inputFile = tempDir.resolve("plain.txt");
-      Path outputFile = tempDir.resolve("encrypted.cce");
+      Path inputPath = tempDir.resolve("plain.txt");
+      Path outputPath = tempDir.resolve("encrypted.cce");
       String content = "High Performance OpenTelemetry Encrypted Payload 2026!";
-      byte[] inputBytes = content.getBytes(StandardCharsets.UTF_8);
+      byte[] input = content.getBytes(StandardCharsets.UTF_8);
       byte[] key = "SecretKey123".getBytes(StandardCharsets.UTF_8);
+      long size = input.length;
 
-      Files.write(inputFile, inputBytes);
-      long fileSize = inputBytes.length;
+      Context context = new Context(CrypticMode.ENCRYPTION, inputPath, outputPath, key, size);
 
-      engine.processFile(CrypticMode.ENCRYPTION, inputFile.toString(), outputFile.toString(), key, fileSize);
+      Files.write(inputPath, input);
 
-      assertThat(outputFile).exists();
-      assertThat(Files.size(outputFile)).isEqualTo(fileSize + 4);
-      assertThat(Files.readAllBytes(outputFile)).isNotEqualTo(inputBytes);
+      engine.process(context);
+
+      assertThat(outputPath).exists();
+      assertThat(Files.size(outputPath)).isEqualTo(size + 4);
+      assertThat(Files.readAllBytes(outputPath)).isNotEqualTo(input);
     }
 
     @Test
     @DisplayName("Should successfully perform complete Encryption -> Decryption cycle")
     void shouldEncryptAndDecryptCycle() throws Exception {
-      Path inputFile = tempDir.resolve("original.txt");
-      Path encryptedFile = tempDir.resolve("transformed.cce");
-      Path decryptedFile = tempDir.resolve("restored.txt");
+      Path inputPath = tempDir.resolve("original.txt");
+      Path encryptedPath = tempDir.resolve("transformed.txt");
+      Path decryptedPath = tempDir.resolve("restored.txt");
 
       String secretText = "Testing streaming byte-by-byte integrity across 8KB buffer boundaries.";
       byte[] key = "DynatraceKey2026".getBytes(StandardCharsets.UTF_8);
 
-      Files.writeString(inputFile, secretText, StandardCharsets.UTF_8);
-      long originalSize = Files.size(inputFile);
+      Files.writeString(inputPath, secretText, StandardCharsets.UTF_8);
+      long originalSize = Files.size(inputPath);
 
-      engine.processFile(CrypticMode.ENCRYPTION, inputFile.toString(), encryptedFile.toString(), key, originalSize);
+      Context context = new Context(CrypticMode.ENCRYPTION, inputPath, encryptedPath, key, originalSize);
 
-      long encryptedSize = Files.size(encryptedFile);
-      engine.processFile(CrypticMode.DECRYPTION, encryptedFile.toString(), decryptedFile.toString(), key, encryptedSize);
+      engine.process(context);
 
-      assertThat(decryptedFile).exists();
-      assertThat(Files.readString(decryptedFile, StandardCharsets.UTF_8)).isEqualTo(secretText);
+      long encryptedSize = Files.size(encryptedPath);
+
+      context =  new Context(CrypticMode.DECRYPTION, encryptedPath, decryptedPath, key, encryptedSize);
+
+      engine.process(context);
+
+      assertThat(decryptedPath).exists();
+      assertThat(Files.readString(decryptedPath, StandardCharsets.UTF_8)).isEqualTo(secretText);
     }
   }
 
@@ -85,17 +98,17 @@ class XorEncryptionEngineTest {
     @Test
     @DisplayName("Should throw DataTruncationException when reported size differs during encryption")
     void shouldThrowDataTruncationOnEncryptionSizeMismatch() throws IOException {
-      Path inputFile = tempDir.resolve("data.txt");
-      Path outputFile = tempDir.resolve("data.cce");
+      Path inputPath = tempDir.resolve("data.txt");
+      Path outputPath = tempDir.resolve("data.cce");
       byte[] key = "Key".getBytes(StandardCharsets.UTF_8);
 
-      byte[] actualBytes = "1234567890".getBytes(StandardCharsets.UTF_8);
-      Files.write(inputFile, actualBytes);
+      Files.writeString(inputPath, "1234567890");
 
-      long fakeReportedSize = 20;
+      long size = 20;
 
+      Context context = new Context(CrypticMode.ENCRYPTION, inputPath, outputPath, key, size);
       assertThatThrownBy(() ->
-          engine.processFile(CrypticMode.ENCRYPTION, inputFile.toString(), outputFile.toString(), key, fakeReportedSize)
+          engine.process(context)
       )
           .isInstanceOf(DataTruncationException.class)
           .hasMessageContaining("Data truncation during encryption!");
@@ -104,21 +117,24 @@ class XorEncryptionEngineTest {
     @Test
     @DisplayName("Should throw DataTruncationException when reported size differs during decryption")
     void shouldThrowDataTruncationOnDecryptionSizeMismatch() throws Exception {
-      Path inputFile = tempDir.resolve("plain.txt");
-      Path encryptedFile = tempDir.resolve("encrypted.cce");
-      Path decryptedFile = tempDir.resolve("restored.txt");
+      Path inputPath = tempDir.resolve("plain.txt");
+      Path encryptedPath = tempDir.resolve("encrypted.cce");
+      Path decryptedPath = tempDir.resolve("restored.txt");
       byte[] key = "Key".getBytes(StandardCharsets.UTF_8);
 
       String content = "Test Content";
-      Files.writeString(inputFile, content, StandardCharsets.UTF_8);
-      long originalSize = Files.size(inputFile);
+      Files.writeString(inputPath, content, StandardCharsets.UTF_8);
+      long originalSize = Files.size(inputPath);
 
-      engine.processFile(CrypticMode.ENCRYPTION, inputFile.toString(), encryptedFile.toString(), key, originalSize);
+      Context context = new Context(CrypticMode.ENCRYPTION, inputPath, encryptedPath, key, originalSize);
+      engine.process(context);
 
       long wrongEncryptedSize = 50;
 
+      Context context2 = new Context(CrypticMode.DECRYPTION, encryptedPath, decryptedPath, key, wrongEncryptedSize);
+
       assertThatThrownBy(() ->
-          engine.processFile(CrypticMode.DECRYPTION, encryptedFile.toString(), decryptedFile.toString(), key, wrongEncryptedSize)
+          engine.process(context2)
       )
           .isInstanceOf(DataTruncationException.class)
           .hasMessageContaining("Data truncation during decryption!");
